--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="index.css" />
+    <script src="https://unpkg.com/bigchaindb-driver@4.2.0/dist/browser/bigchaindb-driver.window.min.js"></script>
+
     <title>Web3 Login</title>
   </head>
   <body>
